<ScrollView
            android:id="@+id/scrollView"
            xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:context=".CardActivity" >
<TableLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
     >
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="900dp" >

                <TextView
                    android:id="@+id/frontSideData"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:minHeight="400px"
                    android:text="this"
                    android:layout_span="2"
         			android:layout_weight="2"
                    android:textSize="@dimen/large" />
            
    </TableRow>
	<TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
    <Button
        android:id="@+id/lastCardButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:enabled="false"
        android:ems="10"
        android:text="@string/lastcard" 
        android:layout_weight="1"/>



    <Button
        android:id="@+id/nextCardButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:ems="10"
        android:text="@string/nextCard" 
        android:layout_weight="1"/>
	    
           
    </TableRow>
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
    <Button
        android:id="@+id/flipCardButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_span="2"
        android:layout_weight="2"
        android:text="@string/flip_card" />
	 </TableRow>
	 <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
    <Button
        android:id="@+id/restartButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:layout_weight="1"
        android:text="@string/restartString" />

    <Button
        android:id="@+id/endButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:layout_weight="1"
        android:text="@string/endString" />

	 </TableRow>
	 <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

	     <CheckBox
	         android:id="@+id/knownCheckBox"
	         android:layout_width="match_parent"
	         android:layout_height="wrap_content"
	         android:layout_gravity="center_horizontal"
	         android:text="@string/knownString" />

	     <TextView
	         android:id="@+id/cardNumber"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:text="TextView" />

	 </TableRow>
</TableLayout>
 </ScrollView>